src/k8s/apps/healthiermo/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: healthiermo
  annotations:
    argocd.argoproj.io/sync-wave: "-3"
