src/k8s/apps/healthiermo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: healthiermo
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: healthiermo
  ports:
    - name: http
      port: 80
      targetPort: http
